Dodano opcje zapisu do pliku binarnego